<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.test</groupId>
  <artifactId>etochatestproject</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
	<properties>
		<jdk.version>1.8</jdk.version>
		<jodatime.version>2.5</jodatime.version>
		<junit.version>4.11</junit.version>
	</properties>
  <dependencyManagement>
	  
	  <dependencies>
			<!-- https://mvnrepository.com/artifact/org.testng/testng -->
			<dependency>
			    <groupId>org.testng</groupId>
			    <artifactId>testng</artifactId>
			    <version>6.14.3</version>
			    <scope>test</scope>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/junit/junit -->
			<dependency>
			    <groupId>junit</groupId>
			    <artifactId>junit</artifactId>
			    <version>4.8.1</version>
			    <scope>test</scope>
			</dependency>
			<dependency>
			        <groupId>commons-logging</groupId>
			        <artifactId>commons-logging</artifactId>
			        <version>1.1.1</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
			<dependency>
			    <groupId>org.seleniumhq.selenium</groupId>
			    <artifactId>selenium-chrome-driver</artifactId>
			    <version>3.11.0</version>
			</dependency>
			
			
			<dependency>
				<groupId>com.smoketurner</groupId>
				<artifactId>dropwizard-swagger</artifactId>
				<version>1.0.0-rc4-2</version> 
			</dependency>
			<dependency>
			    <groupId>org.apache.maven.surefire</groupId>
			    <artifactId>surefire-testng</artifactId>
			    <version>2.14.1</version>
			</dependency>
			<dependency>
			    <groupId>commons-io</groupId>
			    <artifactId>commons-io</artifactId>
			    <version>2.4</version>
			</dependency>
			
			<dependency> 
			   <groupId>info.cukes</groupId> 
			   <artifactId>cucumber-java</artifactId> 
			   <version>1.0.2</version> 
			   <scope>test</scope> 
			</dependency>
			
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-jvm-deps</artifactId>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>gherkin</artifactId>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-core</artifactId>
				<scope>test</scope>
			</dependency>
			<dependency>
			    <groupId>commons-logging</groupId>
			    <artifactId>commons-logging</artifactId>
			    <version>1.2</version>
			</dependency>
			
			<dependency>
			    <groupId>commons-codec</groupId>
			    <artifactId>commons-codec</artifactId>
			    <version>1.10</version>
			</dependency>
			
			<dependency>
			    <groupId>org.apache.commons</groupId>
			    <artifactId>commons-collections4</artifactId>
			    <version>4.1</version>
			</dependency>
			
			<dependency>
			    <groupId>com.fasterxml.jackson.core</groupId>
			    <artifactId>jackson-databind</artifactId>
			    <version>2.7.5</version>
			</dependency>
			
			<dependency>
			    <groupId>stax</groupId>
			    <artifactId>stax-api</artifactId>
			    <version>1.0.1</version>
			</dependency>
			<dependency>
			    <groupId>org.apache.poi</groupId>
			    <artifactId>poi</artifactId>
			    <version>3.15</version>
			</dependency>
			<dependency>
			    <groupId>org.json</groupId>
			    <artifactId>json</artifactId>
			    <version>20140107</version>
			</dependency>
			
			<dependency>
			    <groupId>org.apache.poi</groupId>
			    <artifactId>poi-ooxml</artifactId>
			    <version>3.15</version>
			</dependency>
			<dependency>
			    <groupId>org.apache.xmlbeans</groupId>
			    <artifactId>xmlbeans</artifactId>
			    <version>2.6.0</version>
			</dependency>
			<dependency>
			    <groupId>dom4j</groupId>
			    <artifactId>dom4j</artifactId>
			    <version>1.6.1.redhat-7</version>
			</dependency>
			<dependency>
			    <groupId>info.cukes</groupId>
			    <artifactId>cucumber-groovy</artifactId>
			    <version>1.2.4</version>
			    <scope>test</scope>
			</dependency>
			
			<dependency>
			    <groupId>commons-lang</groupId>
			    <artifactId>commons-lang</artifactId>
			    <version>2.6</version>
			</dependency>
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-junit</artifactId>
				<version>1.2.4</version>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-testng</artifactId>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-html</artifactId>
				<scope>test</scope>
			</dependency>
			<dependency>
			    <groupId>org.hamcrest</groupId>
			    <artifactId>hamcrest-core</artifactId>
			    <version>1.3</version>
			</dependency>
			
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-chrome-driver</artifactId>
			</dependency>
			
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-firefox-driver</artifactId>
			</dependency>
			
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-server</artifactId>
			</dependency>
			
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-java</artifactId>
				<version>2.45.0</version>
			</dependency>
			
			<dependency>
				<groupId>org.codehaus.groovy</groupId>
				<artifactId>groovy-all</artifactId>
				</dependency>
			<dependency>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-surefire-plugin</artifactId>
			  <version>2.19.1</version>
			  <type>maven-plugin</type>
			</dependency>
			<dependency>
			    <groupId>com.sun.jini</groupId>
			    <artifactId>tools</artifactId>
			    <version>2.1</version>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>${jodatime.version}</version>
			</dependency>
	  
	  </dependencies>
  </dependencyManagement>
  
  <build>
	<finalName>automation-scripts</finalName>
	<resources>
	<resource>
	            <directory>${project.basedir}</directory>
	            <includes>
	                <include>lib/*.jar</include>
	            </includes>
	        </resource>
	    </resources>
	<plugins>
	<!-- download source code in Eclipse, best practice -->
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-eclipse-plugin</artifactId>
		<version>2.9</version>
		<configuration>
		<downloadSources>true</downloadSources>
		<downloadJavadocs>false</downloadJavadocs>
		</configuration>
	</plugin>
	<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.2</version>
    </plugin>
	
	<!-- Set a compiler level -->
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>2.3.2</version>
		<configuration>
		<source>${jdk.version}</source>
		<target>${jdk.version}</target>
		</configuration>
	</plugin>
	<plugin>
	<groupId>org.apace.maven.plugins</groupId>
	<artifactId>maven-surefile-plugin</artifactId>
	<version>2.14</version>
	<executions>
	<execution>
	<id>acceptance-test</id>
	<phase>integration-phase</phase>
	<goals>
		<goal>test</goal>
	</goals>
	<configuration>
	<forkCount>${surefire.fork.count}</forkCount>
	<reuseForks>false</reuseForks>
	<argLine>-Duser.language=en</argLine>
	<argLine>-Xmx1024m</argLine>
	<argLine>-XX:MaxPermSize=256m</argLine>
	<argLine>-Dfile.encoding=UFT-8</argLine>
	<useFile>false</useFile>
	<includes>
	<include>**/*Test.class</include>
	</includes>
	<parallel>all</parallel>
	<threadCountSuites>3</threadCountSuites>
	<useUnlimitedThreads>true</useUnlimitedThreads>
	<testFailureIgnore>true</testFailureIgnore>
	</configuration>
	</execution>
	</executions>
	</plugin>
	
	<!-- Maven Shade Plugin -->
	<plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-shade-plugin</artifactId>
	<version>2.3</version>
	<executions>
	<!-- Run shade goal on package phase -->
	<execution>
	<phase>package</phase>
	<goals>
	<goal>shade</goal>
	</goals>
	<configuration> 
	<appendAssemblyId>false</appendAssemblyId>
	<descriptorRefs>
	<descriptorRef>jar-with-dependencies</descriptorRef>
	</descriptorRefs> 
	<archive> 
	<manifest>
	<mainClass>cucumber.cli.Main</mainClass> 
	</manifest>
	</archive>
	<outputEncoding>UTF-8</outputEncoding>
	                            <parallel>classes</parallel>
	                            <perCoreThreadCount>true</perCoreThreadCount>
	                            <threadCountClasses>10</threadCountClasses>
	                            <argLine>-Xmx1024m</argLine>
	                            <argLine>-XX:MaxPermSize=256m</argLine>
	</configuration>
	
	</execution>
	</executions>
	</plugin>
	
	</plugins>
	</build>
</project>